[gd_scene load_steps=3 format=3 uid="uid://c6mgec3yeqma3"]

[ext_resource type="Script" uid="uid://bgr7crboy3kdd" path="res://game/MainMenu.gd" id="1_pgskx"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.12, 0.12, 0.12, 1)
border_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_pgskx")

[node name="UICamera" type="Camera2D" parent="."]

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.06, 0.06, 0.06, 1)

[node name="CenterBox" type="CenterContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Card" type="PanelContainer" parent="CenterBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("1")

[node name="VBox" type="VBoxContainer" parent="CenterBox/Card"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="CenterBox/Card/VBox"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_font_sizes/font_size = 28
text = "Densetsu Engine"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterBox/Card/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "Select an option"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterBox/Card/VBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="LoadDefault" type="Button" parent="CenterBox/Card/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Load default scene"

[node name="NewScene" type="Button" parent="CenterBox/Card/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Create new scene (editor)"

[node name="LoadScene" type="Button" parent="CenterBox/Card/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Load scene..."

[node name="Quit" type="Button" parent="CenterBox/Card/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tscn ; Scenes")
